Do not fire ended event on MediaStreamTrack.stop()

The spec says the ended event must be fired when "a track ends for any
reason other than the stop() method being invoked".

Drive-by: Migrate affected tests to testharness.

Bug: 752913
Change-Id: I206907a6d14b9e249e611c056cff46388c03b186
Reviewed-on: https://chromium-review.googlesource.com/612286
Reviewed-by: Philip Jägenstedt <foolip@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494789}
Former-commit-id: 0f5fe0838638b0efc207b1945f9e427d58060aff